--- a/src/Welcome/Welcome.css
+++ b/src/Welcome/Welcome.css
@@ -7,8 +7,9 @@
 }
 
 .centeredtext {
+  font-size: 50px;
   position: absolute;
-  bottom: 30px;
+  bottom: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
