filed / unfilled heart with awesomefont

--- a/src/SimpleFavoriteList/SimpleFavoriteList.css
+++ b/src/SimpleFavoriteList/SimpleFavoriteList.css
@@ -28,7 +28,7 @@
 .fa-heart {
     color: #a94442;
     font-size: 12px;
-    position: absolute;
+    /* position: absolute; */
     right: 0;
     top: 0;
 }
@@ -37,7 +37,7 @@
 }
 .fa-heart-o {
     font-size: 12px;
-    position: absolute;
+    /* position: absolute; */
     right: 0;
     top: 0;
 }
