--- a/src/LyricDetail/LyricDetail.css
+++ b/src/LyricDetail/LyricDetail.css
@@ -8,3 +8,49 @@ padding-right:100px;
 .margin{
    margin:5px;
 }
+.SimpleFavoriteList{
+   padding-bottom: 30px
+}
+.favorLi{
+ list-style-type: none;
+ margin-left:0;
+ padding:0;
+ font-size: 14px;
+ line-height: 24px;
+ 
+}
+.favorUl{
+  
+   padding:0;
+}
+.viewallButton{
+   color: #f46859;
+   border-radius: 5px;
+   width: auto;
+   height:auto;
+   padding-top:3px;
+   padding-bottom:3px;
+   padding-left:10px;
+   padding-right:10px;
+   background: transparent;
+   border: 2px solid #f46859;
+}
+.fa-heart {
+   color: #a94442;
+   font-size: 12px;
+   /* position: absolute; */
+   right: 0;
+   top: 0;
+}
+.fa-heart:hover {
+   color: #ccc;
+}
+.fa-heart-o {
+   font-size: 12px;
+   /* position: absolute; */
+   right: 0;
+   top: 0;
+}
+.fa-heart-o:hover {
+   color: #a94442;
+}
