--- a/src/LyricDetail/LyricDetail.css
+++ b/src/LyricDetail/LyricDetail.css
@@ -8,3 +8,90 @@ padding-right:100px;
 .margin{
    margin:5px;
 }
+
+
+  /*top:0!important; // Prevent Google Topbar from pushing down body.*/
+ 
+
+/*  .goog-te-banner-frame {display:none;} /* Don't show Google Topbar*/
+/*  #goog-gt-tt {display:none!important;visibility:hidden!important;}*/
+
+
+.goog-te-gadget {
+  font-family: Roboto, 'Open Sans', sans-serif!important;
+  text-transform: uppercase;
+}
+.goog-te-gadget-simple  {
+  background-color: rgba(231, 142, 142,0.20)!important;
+  border: 1px solid rgba(231, 142, 142, 0.5) !important;
+  padding: 8px!important;
+  border-radius: 4px!important;
+  font-size: 1rem!important;
+  line-height:2rem!important;
+  display: inline-block;
+  cursor: pointer;
+  zoom: 1;
+}
+.goog-te-menu2 {
+  max-width: 100%;
+}
+.goog-te-menu-value {
+  color: #000 !important;
+}
+.goog-te-menu-value.before {
+    font-family: 'Material Icons';
+    content: "\E927";
+    margin-right: 16px;
+    font-size: 2rem;
+    vertical-align: -10px;
+    /*width:32px!important;*/
+  } 
+
+.goog-te-menu-value span:nth-child(5) {
+  display:none;
+}
+.goog-te-menu-value span:nth-child(3) {
+  border:none!important;
+  font-family: 'Material Icons';
+  /* &:after {
+    font-family: 'Material Icons';
+    content: "\E5C5";
+    font-size: 1.5rem;
+    vertical-align: -6px;
+  }   */
+}
+
+.goog-te-gadget-icon {
+    background-image: url(https://placehold.it/32)!important;
+    background-position: 0px 0px;
+    height: 32px!important;
+    width: 32px!important;
+    margin-right: 8px!important;
+    /* //     OR */
+    display: none;
+}
+
+/* // ============ HIDE TOP BAR ============  */
+.goog-te-banner-frame.skiptranslate {display: none!important;} 
+
+
+/* ================================== *\
+    Mediaqueries
+\* ================================== */
+@media (max-width: 667px) {
+	
+		goog-te-gadget {
+			width:100%!important;
+		}
+		.skiptranslate {
+			width:100%!important;			
+		}
+		.goog-te-gadget-simple {
+			width: calc(100% - 32px)!important;
+			text-align: center;
+		}	
+	}
+
+
+
+
