--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -2,3 +2,23 @@
   margin: auto;
   width: 300px;
 }
+
+.normalLink {
+  color: #1c1c1c;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
+  min-width: 0.7rem;
+  padding: 0.2rem 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  border: solid 1px #1c1c1c;
+  transition: all, ease-in-out;
+  -webkit-transition: all, ease-in-out;
+}
+
+.normalLink:hover {
+  color: white;
+  text-decoration: none;
+  background: #1c1c1c;
+}
