--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -31,6 +31,56 @@
   text-decoration: none;
   background: white;
 }
-.brandlink: active {
+.brandlink:active {
   color: white;
+}
+
+.normalLink {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
+  min-width: 0.7rem;
+  padding: 0.2rem 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  border: solid 1px white;
+  transition: all, ease-in-out;
+  -webkit-transition: all, ease-in-out;
+}
+
+.normalLink:hover {
+  color: #1c1c1c;
+  text-decoration: none;
+  background: white;
+}
+
+.logoutBtn {
+  background: Transparent;
+  background-repeat: no-repeat;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
+  min-width: 0.7rem;
+  padding: 0.2rem 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  border: solid 1px white;
+  transition: all, ease-in-out;
+  -webkit-transition: all, ease-in-out;
+}
+
+.logoutBtn:hover {
+  color: #1c1c1c;
+  text-decoration: none;
+  background: white;
+}
+
+.userName {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  float: left;
+  padding: 0.2rem 1rem;
+  font-size: 1rem;
 }
