--- a/src/components/ArtistDetail/ArtistDetail.css
+++ b/src/components/ArtistDetail/ArtistDetail.css
@@ -21,6 +21,6 @@ border-radius:10px;
  
 }
 .ifTheresNothing h3{
-    margin-top:50px;
-    align-content: center;
+    margin-top:80px;
+    text-align: center;
 }
