--- a/src/LyricDetail/LyricDetail.css
+++ b/src/LyricDetail/LyricDetail.css
@@ -106,6 +106,7 @@
 }
 .viewallButton {
   color: #f46859;
+  font-family: "Montserrat", sans-serif;
   border-radius: 5px;
   width: auto;
   height: auto;
