--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -4,7 +4,7 @@
 }
 
 .normalLink {
-  color: #1c1c1c;
+  color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: 100;
   min-width: 0.7rem;
@@ -12,7 +12,7 @@
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
-  border: solid 1px #1c1c1c;
+  border: solid 1px white;
   transition: all, ease-in-out;
   -webkit-transition: all, ease-in-out;
 }
