--- a/src/SimpleFavoriteList/SimpleFavoriteList.css
+++ b/src/SimpleFavoriteList/SimpleFavoriteList.css
@@ -1,46 +1,19 @@
-.SimpleFavoriteList{
-    padding-bottom: 30px
+.albumName{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 1.2;
+    color: black;
 }
-.favorLi{
-  list-style-type: none;
-  margin-left:0;
-  padding:0;
-  font-size: 14px;
-  line-height: 24px;
-  
+.lyricBlock{
+    font-family: "Montserrat", sans-serif;
+    list-style-type: circle;
+    font-size: 18px;
+    color: black;
 }
-.favorUl{
-   
-    padding:0;
-}
-.viewallButton{
-    color: #f46859;
-    border-radius: 5px;
-    width: auto;
-    height:auto;
-    padding-top:3px;
-    padding-bottom:3px;
-    padding-left:10px;
-    padding-right:10px;
-    background: transparent;
-    border: 2px solid #f46859;
-}
-.fa-heart {
-    color: #a94442;
-    font-size: 12px;
-    /* position: absolute; */
-    right: 0;
-    top: 0;
-}
-.fa-heart:hover {
-    color: #ccc;
-}
-.fa-heart-o {
-    font-size: 12px;
-    /* position: absolute; */
-    right: 0;
-    top: 0;
-}
-.fa-heart-o:hover {
-    color: #a94442;
+.link {
+    color: black;
+  }
+.link:hover {
+    color: #b3b3b3;
 }
