--- a/src/SimpleFavoriteList/SimpleFavoriteList.css
+++ b/src/SimpleFavoriteList/SimpleFavoriteList.css
@@ -44,3 +44,28 @@
 .fa-heart-o:hover {
     color: #a94442;
 }
+li {
+    list-style-type:none
+}
+.simpleFavorite{
+    color: black;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+    font-size: 1.2rem;
+    line-height: 1.8;
+
+
+}
+.sidebarTitle{
+    color: black;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 1.7rem;
+    margin-top: 20px;
+
+
+}
+ul{
+    padding-inline-start: 0;
+
+}
