--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -4,7 +4,7 @@
 }
 
 .normalLink {
-  color: white;
+  color: black;
   font-family: "Montserrat", sans-serif;
   font-weight: 100;
   min-width: 0.7rem;
@@ -18,7 +18,23 @@
 }
 
 .normalLink:hover {
-  color: white;
+  color: black;
   text-decoration: none;
-  background: #1c1c1c;
+  background: white;
+}
+
+.logoutBtn {
+  background: Transparent;
+  background-repeat: no-repeat;
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
+  min-width: 0.7rem;
+  padding: 0.2rem 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  border: solid 1px black;
+  transition: all, ease-in-out;
+  -webkit-transition: all, ease-in-out;
 }
