--- a/src/LyricDetail/LyricDetail.css
+++ b/src/LyricDetail/LyricDetail.css
@@ -15,7 +15,7 @@
 /*  #goog-gt-tt {display:none!important;visibility:hidden!important;}*/
 
 .goog-te-gadget {
-  font-family: Roboto, "Open Sans", sans-serif !important;
+  font-family: "Montserrat", sans-serif !important;
   text-transform: uppercase;
 }
 .goog-te-gadget-simple {
