--- a/src/components/ArtistsResults/ArtistsResults.css
+++ b/src/components/ArtistsResults/ArtistsResults.css
@@ -13,11 +13,12 @@ border-radius:10px;
     height:70px;
 }
 .textH3{
-    font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
   font-size: 1.4rem;
   line-height: 1.2;
- 
-  
-    color: black;
+  color: black;
+}
+.Searching-Results{
+  margin-right: 50px;
 }
