--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -3,13 +3,8 @@
   width: 300px;
 }
 
-<<<<<<< HEAD
-.loginReglink {
-  color: #1c1c1c;
-=======
 .normalLink {
   color: black;
->>>>>>> 16703ce32e6302b48d9e1aa534a0d7953ac52d28
   font-family: "Montserrat", sans-serif;
   font-weight: 100;
   min-width: 0.7rem;
@@ -22,13 +17,8 @@
   -webkit-transition: all, ease-in-out;
 }
 
-<<<<<<< HEAD
-.loginReglink:hover {
-  color: white;
-=======
 .normalLink:hover {
   color: black;
->>>>>>> 16703ce32e6302b48d9e1aa534a0d7953ac52d28
   text-decoration: none;
   background: white;
 }
@@ -36,7 +26,7 @@
 .logoutBtn {
   background: Transparent;
   background-repeat: no-repeat;
-  color: black;
+  color: white;
   font-family: "Montserrat", sans-serif;
   font-weight: 100;
   min-width: 0.7rem;
@@ -44,9 +34,15 @@
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
-  border: solid 1px black;
+  border: solid 1px white;
   transition: all, ease-in-out;
   -webkit-transition: all, ease-in-out;
+}
+
+.logoutBtn:hover {
+  color: black;
+  text-decoration: none;
+  background: white;
 }
 
 .loginform {
