--- a/src/components/ArtistDetail/ArtistDetail.css
+++ b/src/components/ArtistDetail/ArtistDetail.css
@@ -22,3 +22,7 @@ border-radius:10px;
     margin-top:80px;
     text-align: center;
 }
+
+.heading2 {
+    font-family: "Montserrat", sans-serif;
+  }
