--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -26,7 +26,7 @@
 .logoutBtn {
   background: Transparent;
   background-repeat: no-repeat;
-  color: white;
+  color: black;
   font-family: "Montserrat", sans-serif;
   font-weight: 100;
   min-width: 0.7rem;
@@ -34,7 +34,7 @@
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
-  border: solid 1px white;
+  border: solid 1px black;
   transition: all, ease-in-out;
   -webkit-transition: all, ease-in-out;
 }
@@ -43,51 +43,4 @@
   color: black;
   text-decoration: none;
   background: white;
-}
-
-.loginform {
-  color: black;
-}
-
-.loginform:hover {
-  color: white;
-}
-
-.password {
-  display: block;
-  position: relative;
-  text-transform: uppercase;
-  font-weight: 700;
-  width: 100%;
-}
-
-.password_input {
-  display: block;
-  text-transform: none;
-  width: 100%;
-  height: 42px;
-  border-width: 0 0 1px;
-  border-style: solid;
-  border-color: #b6b6b6;
-  font-weight: 400;
-}
-
-.password_show {
-  cursor: pointer;
-  position: absolute;
-  bottom: 11px;
-  height: 16px;
-  right: 0;
-  background: black;
-  color: white;
-  padding: 4px 8px;
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 0.8em;
-}
-
-.font {
-  font-family: "Montserrat", sans-serif;
-  color: #1c1c1c;
-  font-size: 1rem;
 }
